  * Feature: Authorisation against [[http://mathias-kettner.de/checkmk_livestatus.html|mk_livestatus]] API added
  * Feature: Sample nginx webserver config added ( by evax@users.sourceforge.net )
  * Feature: Kohana backport to support PHP 5.1.6 ( Kudos to Andreas Ericsson )
  * Bugfix: Sort list of special templates
  * Bugfix: Urlencode hostname and service description  ( Reported by Yannick ) 

**pnp-0.6.7 09/27/2010**

  * Bugfix: Page config parser fix (Beau Gunderson) 
  * Bugfix: Zoom window size fixed (Report by Rudolf Labuschagne) 
  * Bugfix: Fixed undefined offset while using 'ds_name' in templates (Reported by Vladimir Bilik)
  * Bugfix: Npcdmod respects process_perf_data option used in hosts and services definitions ( Reported by Wolfgang Barth )
  * Template: New Template check_nagiostats.php used with check_nagiostats written by Jochen Bern 

**pnp-0.6.6 08/07/2010**

  * Bugfix: Fixed max amount of graphs per template 
  * Bugfix: Autodetect PNP base URL
  * Bugfix: Too short npcdmod perfdata_template to take perfdata + overhead, increased +1024byte
  * Bugfix: Ignore files in var/perfdata and check for empty directories
  * Bugfix: Reducing memory usage while parsing page config (Laurent Freval)

**pnp-0.6.5 07/09/2010**

  * Feature: Special Templates are back [[tpl_special]]
  * Feature: New rrdtool helper functions makes template design easier [[tpl_helper]]
  * Feature: config.php -> 'recursive_template_search' is enabled by default
  * Feature: config.php -> 'template_dirs' is now an array of directorys to search for PNP templates

**pnp-0.6.4 06/03/2010**

  * Update: jQuery Update to 1.4.2
  * Update: jQuery-ui Update to 1.8
  * Feature: New configure Option --with-base-url
  * Template: New template check_ntp_time.php (Mathias Kettner)
  * Feature: New i18n files for fr_FR (Yannig Parre)
  * Feature: New jQuery Theme 'multisite'

**pnp-0.6.3 03/16/2010**

  * Feature: New helper script libexec/rrd_convert.pl -> [[rrd_convert]]