@@ -288,8 +288,8 @@ class rrd_Core {
 		$line = "";
 		$line .= "CDEF:green=".$vname.",".$warning.",LT,".$vname.",UNKN,IF ";
 		$line .= "CDEF:btw=".$vname.",".$critical.",LT,".$vname.",UNKN,IF ";
-		$line .= "CDEF:blue=btw,".$warning.",GT,btw,UNKN,IF ";
-		$line .= "CDEF:red=".$vname.",".$critical.",GT,".$vname.",UNKN,IF ";
+		$line .= "CDEF:blue=btw,".$warning.",GE,btw,UNKN,IF ";
+		$line .= "CDEF:red=".$vname.",".$critical.",GE,".$vname.",UNKN,IF ";
 		$line .= rrd::area("green", $color_green.$opacity);
 		$line .= rrd::area("blue", $color_btw.$opacity);
 		$line .= rrd::area("red", $color_red.$opacity);
@@ -312,8 +312,8 @@ class rrd_Core {
 		$line = "";
 		$line .= "CDEF:green=".$vname.",".$warning.",LT,".$vname.",UNKN,IF ";
 		$line .= "CDEF:btw=".$vname.",".$critical.",LT,".$vname.",UNKN,IF ";
-		$line .= "CDEF:blue=btw,".$warning.",GT,btw,UNKN,IF ";
-		$line .= "CDEF:red=".$vname.",".$critical.",GT,".$vname.",UNKN,IF ";
+		$line .= "CDEF:blue=btw,".$warning.",GE,btw,UNKN,IF ";
+		$line .= "CDEF:red=".$vname.",".$critical.",GE,".$vname.",UNKN,IF ";
 		$line .= "CDEF:green2=green,0,EQ,0.000001,green,IF ";
 		$line .= rrd::tick("green2", $color_green.$opacity, $fraction);
 		$line .= rrd::tick("blue", $color_btw.$opacity, $fraction);
