@@ -11,6 +11,7 @@
   * Feature: Kohana backport to support PHP 5.1.6 ( Kudos to Andreas Ericsson )
   * Bugfix: Sort list of special templates
   * Bugfix: Urlencode hostname and service description  ( Reported by Yannick ) 
+  * Bugfix: corrected warning/critical thresholds in ticker/alerter functions
 
 **pnp-0.6.7 09/27/2010**
 
